attempted fixing missing spaces

--- a/style.css
+++ b/style.css
@@ -400,6 +400,7 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
+  width: 100%;
 } 
   
 .input_area { 
@@ -479,6 +480,7 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
+  width: 100%;
 } 
   
 .input_area { 
